Fix Spacing and Line for Dining Features
Fixed Spacing and Line for Dining Features

--- a/css/main.css
+++ b/css/main.css
@@ -752,7 +752,7 @@ input, textarea {
    font-weight: normal;
    font-size: 15px;
    margin-top: 10px;
-   margin-bottom: 3px;
+   margin-bottom: 5px;
 }
 
 #features-summary section p {
